# solana-mint-cnfts

./: Cargo.toml  README.md
src/: logger.rs  main.rs  structs.rs
src/addons/: config.rs
src/files/: config.json
src/transactions/: create_tree.rs  mint_nft.rs  mod.rs
