[package]
name = "mint_cnfts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
mpl-bubblegum = "1.2.0"
solana-client = "1.17.0"
solana-sdk = "1.17.0"
spl-account-compression = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.195"
serde_json = "1.0.111"
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.56"
solana-transaction-status = "1.17.0"